removing my-app from git ignor

--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "yarn.lock": [
       "git rm --cached"
     ]
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "react-map-gl": "^5.2.3"
   }
 }
